feat!: updating to Java 21 (#1364)